<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingBottom="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/folders_background">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/choose_folder"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/folder_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/folder_outline"
                    android:layout_centerVertical="true"
                    app:tint="@color/dark_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_folders"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/folder_icon"
                    android:layout_centerVertical="true" />

                <ImageView
                    android:id="@+id/add_folder"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/add_outline"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:layout_centerVertical="true"
                    android:focusable="true"
                    android:clickable="true"/>
            </RelativeLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="350dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/note_folder_item"
                android:nestedScrollingEnabled="false" />

            </androidx.core.widget.NestedScrollView>

            <TextView
                android:id="@+id/generate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/generate"
                android:background="@drawable/generate_button"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:elevation="2dp"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/cancel"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/save"
                    android:textSize="18sp"
                    android:textColor="#98BDFA"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

</androidx.cardview.widget.CardView>